test/src/e2e_vm_tests/test_programs/should_fail/associated_type_impl_multiple_same_name/src/main.sw
script;

trait TypeTrait {
    type T;
}

struct Struct {
}

impl TypeTrait for Struct {
  type T = u64;
  type T = u32;
}

fn main() -> u32 {
  0
}
